Setup paste action text before main loop starts

Summary:
KIO::pasteActionText sometimes hang when called after main loop start.

BUG: 411196

Test Plan:
1. Setup KDE Connect clipboard sync
2. Copy something on the phone
3. Open gwenview. Without the patch it will start about 15 seconds

Reviewers: #gwenview

Subscribers: #gwenview

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D28051